Fixed layout issues with IE9 and double form submition

--- a/Applications/Bec.TargetFramework/MainLine/Presentation/Bec.TargetFramework.Presentation.Web/Content/css/your_style.less
+++ b/Applications/Bec.TargetFramework/MainLine/Presentation/Bec.TargetFramework.Presentation.Web/Content/css/your_style.less
@@ -252,3 +252,7 @@
         padding-bottom: 20px;
     }
 }
+
+.btn-header > :first-child > a {
+    cursor: pointer !important;
+}
